syntax = "proto3";

package main;

option go_package = "./proto";

// 添加产品评价回复
message AddCommentReplayReq {
  int32 type = 1; //评论人员类型；0->会员；1->管理员
  int64 comment_id = 2; //评论id
  string member_nick_name = 3; //评论人员昵称
  string member_icon = 4; //评论人员头像
  string content = 5; //内容

}

message AddCommentReplayResp {
  string pong = 1;
}

// 删除产品评价回复
message DeleteCommentReplayReq {
  string id = 1;
}

message DeleteCommentReplayResp {
  string pong = 1;
}

// 更新产品评价回复
message UpdateCommentReplayReq {
  string id = 1; //
  int64 comment_id = 2; //评论id
  string member_nick_name = 3; //评论人员昵称
  string member_icon = 4; //评论人员头像
  string content = 5; //内容
  int32 type = 7; //评论人员类型；0->会员；1->管理员
}

message UpdateCommentReplayResp {
  string pong = 1;
}

// 查询产品评价回复详情
message QueryCommentReplayDetailReq {
  string id = 1;
}

message QueryCommentReplayDetailResp {
  string id = 1; //
  int64 comment_id = 2; //评论id
  string member_nick_name = 3; //评论人员昵称
  string member_icon = 4; //评论人员头像
  string content = 5; //内容
  string create_time = 6; //评论时间
  int32 type = 7; //评论人员类型；0->会员；1->管理员

}

// 分页查询产品评价回复列表
message QueryCommentReplayListReq {
  int64 page_num = 1; //第几页
  int64 page_size = 2; //每页的数量
  int64 comment_id = 3; //
}

message CommentReplayListData {
  string id = 1; //
  int64 comment_id = 2; //评论id
  string member_nick_name = 3; //评论人员昵称
  string member_icon = 4; //评论人员头像
  string content = 5; //内容
  string create_time = 6; //评论时间
  int32 type = 7; //评论人员类型；0->会员；1->管理员

}

message QueryCommentReplayListResp {
  int64 total = 1;
  repeated  CommentReplayListData list = 2;
}

// 产品评价回复
service CommentReplayService {
  // 添加产品评价回复
  rpc AddCommentReplay(AddCommentReplayReq) returns (AddCommentReplayResp){}
  // 删除产品评价回复
  rpc DeleteCommentReplay(DeleteCommentReplayReq) returns (DeleteCommentReplayResp){}
  // 更新产品评价回复
  rpc UpdateCommentReplay(UpdateCommentReplayReq) returns (UpdateCommentReplayResp ){}
  // 查询产品评价回复详情
  rpc QueryCommentReplayDetail(QueryCommentReplayDetailReq) returns (QueryCommentReplayDetailResp){}
  // 查询产品评价回复列表
  rpc QueryCommentReplayList(QueryCommentReplayListReq) returns (QueryCommentReplayListResp){}


}
