syntax = "proto3";

package main;

option go_package = "./proto";

// 添加产品满减表(只针对同商品)
message AddProductFullReductionReq {
  int64 id = 1; //
  int64 product_id = 2; //商品id
  int64 full_price = 3; //商品满多少
  int64 reduce_price = 4; //商品减多少

}

message AddProductFullReductionResp {
  string pong = 1;
}

// 删除产品满减表(只针对同商品)
message DeleteProductFullReductionReq {
  repeated int64 ids = 1;
}

message DeleteProductFullReductionResp {
  string pong = 1;
}

// 分页查询产品满减表(只针对同商品)列表
message QueryProductFullReductionListReq {
  int64 product_id = 1; //
}

message ProductFullReductionListData {
  int64 id = 1; //
  int64 product_id = 2; //商品id
  int64 full_price = 3; //商品满多少
  int64 reduce_price = 4; //商品减多少

}

message QueryProductFullReductionListResp {
  int64 total = 1;
  repeated  ProductFullReductionListData list = 2;
}

// 产品满减表(只针对同商品)
service ProductFullReductionService {
  // 添加产品满减表(只针对同商品)
  rpc AddProductFullReduction(AddProductFullReductionReq) returns (AddProductFullReductionResp){}
  // 删除产品满减表(只针对同商品)
  rpc DeleteProductFullReduction(DeleteProductFullReductionReq) returns (DeleteProductFullReductionResp){}
  // 查询产品满减表(只针对同商品)列表
  rpc QueryProductFullReductionList(QueryProductFullReductionListReq) returns (QueryProductFullReductionListResp){}


}
