syntax = "proto3";

package main;

option go_package = "./proto";

// 添加产品阶梯价格表(只针对同商品)
message AddProductLadderReq {
  int64 id = 1; //
  int64 product_id = 2; //商品id
  int32 count = 3; //满足的商品数量
  int64 discount = 4; //折扣
  int64 price = 5; //折后价格


}

message AddProductLadderResp {
  string pong = 1;
}

// 删除产品阶梯价格表(只针对同商品)
message DeleteProductLadderReq {
  repeated int64 ids = 1;
}

message DeleteProductLadderResp {
  string pong = 1;
}

// 更新产品阶梯价格表(只针对同商品)
message UpdateProductLadderReq {
  int64 id = 1; //
  int64 product_id = 2; //商品id
  int32 count = 3; //满足的商品数量
  int64 discount = 4; //折扣
  int64 price = 5; //折后价格

}

message UpdateProductLadderResp {
  string pong = 1;
}

// 查询产品阶梯价格表(只针对同商品)详情
message QueryProductLadderDetailReq {
    int64 id = 1;
}

message QueryProductLadderDetailResp {
  int64 id = 1; //
  int64 product_id = 2; //商品id
  int32 count = 3; //满足的商品数量
  int64 discount = 4; //折扣
  int64 price = 5; //折后价格

}

// 分页查询产品阶梯价格表(只针对同商品)列表
message QueryProductLadderListReq {
  int64 product_id = 1; //
}

message ProductLadderListData {
  int64 id = 1; //
  int64 product_id = 2; //商品id
  int32 count = 3; //满足的商品数量
  int64 discount = 4; //折扣
  int64 price = 5; //折后价格

}

message QueryProductLadderListResp {
  int64 total = 1;
  repeated  ProductLadderListData list = 2;
}

// 产品阶梯价格表(只针对同商品)
service ProductLadderService {
  // 添加产品阶梯价格表(只针对同商品)
  rpc AddProductLadder(AddProductLadderReq) returns (AddProductLadderResp){}
  // 删除产品阶梯价格表(只针对同商品)
  rpc DeleteProductLadder(DeleteProductLadderReq) returns (DeleteProductLadderResp){}
  // 更新产品阶梯价格表(只针对同商品)
  rpc UpdateProductLadder(UpdateProductLadderReq) returns (UpdateProductLadderResp ){}
  // 查询产品阶梯价格表(只针对同商品)详情
   rpc QueryProductLadderDetail(QueryProductLadderDetailReq) returns (QueryProductLadderDetailResp){}
  // 查询产品阶梯价格表(只针对同商品)列表
  rpc QueryProductLadderList(QueryProductLadderListReq) returns (QueryProductLadderListResp){}


}
