syntax = "proto3";

package main;

option go_package = "./proto";

// 添加商品操作日志
message AddProductOperateLogReq {
  string id = 1; //
  int64 product_id = 2; //产品id
  int64 price_old = 3; //原价
  int64 price_new = 4; //新价格
  int64 sale_price_old = 5; //原售价
  int64 sale_price_new = 6; //新售价
  int32 gift_point_old = 7; //赠送的积分
  int32 gift_point_new = 8; //新的积分
  int32 use_point_limit_old = 9; //使用积分限制
  int32 use_point_limit_new = 10; //新的使用积分限制
  string operate_man = 11; //操作人
}

message AddProductOperateLogResp {
  string pong = 1;
}

// 删除商品操作日志
message DeleteProductOperateLogReq {
  string id = 1;
}

message DeleteProductOperateLogResp {
  string pong = 1;
}

// 查询商品操作日志详情
message QueryProductOperateLogDetailReq {
  string id = 1;
}

message QueryProductOperateLogDetailResp {
  string id = 1; //
  int64 product_id = 2; //产品id
  int64 price_old = 3; //原价
  int64 price_new = 4; //新价格
  int64 sale_price_old = 5; //原售价
  int64 sale_price_new = 6; //新售价
  int32 gift_point_old = 7; //赠送的积分
  int32 gift_point_new = 8; //新的积分
  int32 use_point_limit_old = 9; //使用积分限制
  int32 use_point_limit_new = 10; //新的使用积分限制
  string operate_man = 11; //操作人
  string create_time = 12; //创建时间

}

// 分页查询商品操作日志列表
message QueryProductOperateLogListReq {
  int64 product_id = 1; //产品id
  int64 page_num = 11; //第几页
  int64 page_size = 12; //每页的数量
}

message ProductOperateLogListData {
  string id = 1; //
  int64 product_id = 2; //产品id
  int64 price_old = 3; //原价
  int64 price_new = 4; //新价格
  int64 sale_price_old = 5; //原售价
  int64 sale_price_new = 6; //新售价
  int32 gift_point_old = 7; //赠送的积分
  int32 gift_point_new = 8; //新的积分
  int32 use_point_limit_old = 9; //使用积分限制
  int32 use_point_limit_new = 10; //新的使用积分限制
  string operate_man = 11; //操作人
  string create_time = 12; //创建时间

}

message QueryProductOperateLogListResp {
  int64 total = 1;
  repeated  ProductOperateLogListData list = 2;
}

// 商品操作日志
service ProductOperateLogService {
  // 添加商品操作日志
  rpc AddProductOperateLog(AddProductOperateLogReq) returns (AddProductOperateLogResp){}
  // 删除商品操作日志
  rpc DeleteProductOperateLog(DeleteProductOperateLogReq) returns (DeleteProductOperateLogResp){}
  // 查询商品操作日志详情
  rpc QueryProductOperateLogDetail(QueryProductOperateLogDetailReq) returns (QueryProductOperateLogDetailResp){}
  // 查询商品操作日志列表
  rpc QueryProductOperateLogList(QueryProductOperateLogListReq) returns (QueryProductOperateLogListResp){}


}
